--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Hibernate additional native properties to set on the JPA provider.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.current_session_context_class=thread
 spring.jpa.properties.hibernate.format_sql=true
 
 # Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.sql.init.mode=always 
+spring.datasource.initialization-mode=always
