--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.sql.init.mode=always 
 spring.datasource.initialization-mode=always
+
+springdoc.swagger-ui.csrf.enabled = true
