--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.sql.init.mode=always
 spring.datasource.initialization-mode=always
 
 springdoc.swagger-ui.csrf.enabled = true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.packagesToScan = com.campus.ong.repositories.entities, com.campus.ong.controllers
+springdoc.pathsToMatch=/campuses/**, /users/**, /shippings/**, /volunteers/**, /products/**, /occupations/**, /partners/**, /materialaids/**
