--- a/pom.xml
+++ b/pom.xml
@@ -96,10 +96,20 @@
 			<version>0.11.5</version>
 		</dependency>
 		<dependency>
-           <groupId>org.springdoc</groupId>
-           <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-           <version>2.4.0</version>
-   		</dependency>	
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
