--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,13 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.sql.init.mode=always 
 spring.datasource.initialization-mode=always
 
-springdoc.swagger-ui.csrf.enabled = true
+
+# Disabling the /v3/api-docs endpoint
 springdoc.api-docs.enabled=true
+# Disabling the swagger-ui
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui/index.html
-springdoc.packagesToScan = com.campus.ong.repositories.entities, com.campus.ong.controllers
-springdoc.pathsToMatch=/campuses/**, /users/**, /shippings/**, /volunteers/**, /products/**, /occupations/**, /partners/**, /materialaids/**
+# swagger-ui custom path
+springdoc.swagger-ui.path=/ong/index.html
+
+springdoc.packagesToScan=com.campus.ong.repositories.entities, com.campus.ong.controllers
+springdoc.pathsToMatch=/campuses/**, /authenticate/**, /users/**
