--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/ong/index.html
 
 springdoc.packagesToScan=com.campus.ong.repositories.entities, com.campus.ong.controllers
-springdoc.pathsToMatch=/campuses/**, /authenticate/**, /users/**
+springdoc.pathsToMatch=/**
