--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,6 @@ spring.datasource.password=Dm980504
 
 # DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Defaults to "create-drop" when using an embedded database and no schema manager was detected. Otherwise, defaults to "none".
 spring.jpa.hibernate.ddl-auto=update
-# Whether to enable logging of SQL statements.
-spring.jpa.show-sql=true
 
 # Hibernate additional native properties to set on the JPA provider.
 spring.jpa.properties.hibernate.format_sql=true
@@ -17,6 +15,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.sql.init.mode=always 
 spring.datasource.initialization-mode=always
 
+springdoc.swagger-ui.csrf.enabled = true
 
 # Disabling the /v3/api-docs endpoint
 springdoc.api-docs.enabled=true
@@ -25,5 +24,9 @@ springdoc.swagger-ui.enabled=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/ong/index.html
 
-springdoc.packagesToScan=com.campus.ong.repositories.entities, com.campus.ong.controllers
+springdoc.packagesToScan=com.campus.ong.controllers
 springdoc.pathsToMatch=/**
+
+spring.jpa.show-sql=true
+
+logging.level.org.springframework.security = DEBUG
