--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ong
 spring.datasource.url=jdbc:postgresql://localhost:5432/ong
 spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+spring.datasource.password=Dm980504
 
 # DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Defaults to "create-drop" when using an embedded database and no schema manager was detected. Otherwise, defaults to "none".
 spring.jpa.hibernate.ddl-auto=update
