--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ springdoc.swagger-ui.path=/ong/index.html
 
 springdoc.packagesToScan=com.campus.ong.controllers
 springdoc.pathsToMatch=/**
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
 
 spring.jpa.show-sql=true
 
